--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,13 @@
 			<version>10.0.0</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>14.0.0</version>
+			<classifier>jakarta</classifier>
+		</dependency>
 	</dependencies>
 
 	<properties>
